--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,18 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest package="com.scurab.android.zumpareader"
-          xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest
+    package="com.scurab.android.zumpareader"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.STORAGE" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 
     <application
+        android:name=".ZumpaReaderApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:name=".ZumpaReaderApp"
         android:theme="@style/ThemeBlack">
         <activity
             android:name=".app.MainActivity"
@@ -23,6 +24,12 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".app.SettingsActivity"
+            android:configChanges="orientation|screenSize"
+            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+            android:label="@string/app_name"/>
     </application>
 
 </manifest>
