--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,7 +47,7 @@ dependencies {
 
     compile 'org.jsoup:jsoup:1.8.3'
     compile 'com.pawegio.kandroid:kandroid:0.3.8@aar'
-    compile 'com.yqritc:recyclerview-flexibledivider:1.2.6'
+//    compile 'com.yqritc:recyclerview-flexibledivider:1.2.6'
 
     compile 'io.reactivex:rxkotlin:0.30.1'
     compile 'io.reactivex:rxandroid:1.0.1'
