--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,7 +34,7 @@ android {
     }
     buildTypes {
         debug {
-            versionNameSuffix "-build" + getDate() + "-git" + gitSha()
+            versionNameSuffix "-git" + gitSha()
             minifyEnabled false
         }
         release {
