--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,6 +68,9 @@ repositories {
 
 dependencies {
     //compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile "com.google.android.gms:play-services-base:${playServices}"
+    compile "com.google.android.gms:play-services-gcm:${playServices}"
+
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     compile "com.android.support:appcompat-v7:${supportLibraryVersion}"
     compile "com.android.support:design:${supportLibraryVersion}"
