--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,12 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+
+    <permission android:name="com.scurab.android.zumpareader.permission.C2D_MESSAGE" android:protectionLevel="signature" />
+    <uses-permission android:name="com.scurab.android.zumpareader.permission.C2D_MESSAGE" />
+
+
     <application
         android:name=".ZumpaReaderApp"
         android:allowBackup="true"
@@ -18,6 +24,7 @@
         <activity
             android:name=".app.MainActivity"
             android:configChanges="orientation|screenSize"
+            android:exported="true"
             android:launchMode="singleTask"
             android:label="@string/app_name">
             <intent-filter>
@@ -42,6 +49,13 @@
         <meta-data
             android:name="io.fabric.ApiKey"
             android:value="1dcf380e1e5890c2c982152db1933ee9d7e8bde8" />
+
+        <receiver android:name=".GCMReceiver" android:permission="com.google.android.c2dm.permission.SEND" >
+            <intent-filter>
+                <action android:name="com.google.android.c2dm.intent.RECEIVE" />
+                <category android:name="${applicationId}" />
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
