--- a/app/build.gradle
+++ b/app/build.gradle
@@ -95,7 +95,9 @@ dependencies {
 
     compile 'com.squareup.picasso:picasso:2.5.2'
 
+    compile 'com.github.salomonbrys.kotson:kotson:1.7.0'
     compile 'com.squareup:otto:1.3.8'
+    
     compile('com.crashlytics.sdk.android:crashlytics:2.5.5@aar') {
         transitive = true;
     }
