--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 buildscript {
-    ext.kotlin_version = '1.0.0-beta-2423'
-    ext.playServices = "8.3.0"
-    ext.supportLibraryVersion = "23.1.1"
+    ext.kotlin_version = '1.0.5-2'
+    ext.playServices = "8.4.0"
+    ext.supportLibraryVersion = "23.2.1"
 
     repositories {
         maven { url 'https://maven.fabric.io/public' }
@@ -10,7 +10,7 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.5.0'
+        classpath 'com.android.tools.build:gradle:2.2.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'io.fabric.tools:gradle:1.+'
     }
@@ -23,7 +23,7 @@ apply plugin: 'io.fabric'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion '23.0.2'
+    buildToolsVersion '23.0.3'
 
     defaultConfig {
         applicationId "com.scurab.android.zumpareader"
@@ -77,6 +77,10 @@ dependencies {
     compile "com.android.support:design:${supportLibraryVersion}"
     compile "com.android.support:percent:${supportLibraryVersion}"
 
+    compile 'org.jetbrains.anko:anko-sdk15:0.8.3' // sdk19, sdk21, sdk23 are also available
+    compile 'org.jetbrains.anko:anko-support-v4:0.8.3' // In case you need support-v4 bindings
+    compile 'org.jetbrains.anko:anko-appcompat-v7:0.8.3' // For appcompat-v7 bindings
+
     compile 'org.jsoup:jsoup:1.8.3'
     compile 'com.pawegio.kandroid:kandroid:0.3.8@aar'
 //    compile 'com.yqritc:recyclerview-flexibledivider:1.2.6'
@@ -84,19 +88,19 @@ dependencies {
     compile 'io.reactivex:rxkotlin:0.30.1'
     compile 'io.reactivex:rxandroid:1.0.1'
 
-    compile 'com.squareup.okhttp:okhttp:2.6.0'
-    compile 'com.squareup.okhttp:okhttp-urlconnection:2.6.0'
-    compile 'com.squareup.okhttp:logging-interceptor:2.6.0'
+    compile 'com.squareup.okhttp3:okhttp:3.2.0'
+    compile 'com.squareup.okhttp3:okhttp-urlconnection:3.2.0'
+    compile 'com.squareup.okhttp3:logging-interceptor:3.2.0'
 
-    compile 'com.squareup.retrofit:retrofit:2.0.0-beta2'
-    compile 'com.squareup.retrofit:converter-gson:2.0.0-beta2'
-    compile 'com.squareup.retrofit:adapter-rxjava:2.0.0-beta2'
+    compile 'com.squareup.retrofit2:retrofit:2.0.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.0.0'
+    compile 'com.squareup.retrofit2:adapter-rxjava:2.0.0'
 
     compile 'com.github.orangegangsters:swipy:1.2.2@aar'
 
     compile 'com.squareup.picasso:picasso:2.5.2'
 
-    compile 'com.github.salomonbrys.kotson:kotson:1.7.0'
+    compile 'com.github.salomonbrys.kotson:kotson:2.1.0'
     compile 'com.squareup:otto:1.3.8'
     
     compile('com.crashlytics.sdk.android:crashlytics:2.5.5@aar') {
