--- a/app/tools.gradle
+++ b/app/tools.gradle
@@ -3,7 +3,7 @@ gradle.allprojects { ext.gitSha = { return gitSha(); } }
 
 def getDate() {
     def date = new Date()
-    def formattedDate = date.format('yyyyMMddHHmmss')
+    def formattedDate = date.format('yyyyMMdd')
     return formattedDate
 }
 
