--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 buildscript {
-    ext.kotlin_version = '1.0.5-2'
-    ext.playServices = "8.4.0"
-    ext.supportLibraryVersion = "23.2.1"
+    ext.kotlin_version = '1.1.1'
+    ext.playServices = "10.2.0"
+    ext.supportLibraryVersion = "25.3.0"
 
     repositories {
         maven { url 'https://maven.fabric.io/public' }
@@ -10,7 +10,7 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.2.2'
+        classpath 'com.android.tools.build:gradle:2.3.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'io.fabric.tools:gradle:1.+'
     }
@@ -22,17 +22,17 @@ apply plugin: 'kotlin-android'
 apply plugin: 'io.fabric'
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion '23.0.3'
+    compileSdkVersion 25
+    buildToolsVersion '25.0.2'
 
     defaultConfig {
         applicationId "com.scurab.android.zumpareader"
         buildConfigField "String", "BUILD_DETAIL", "\"build-" + getDate() + ",git-" + gitSha() + "\""
         buildConfigField "boolean", "VERBOSE_LOGGING", "false"
         minSdkVersion 14
-        targetSdkVersion 23
-        versionCode 1
-        versionName "0.1.1"
+        targetSdkVersion 25
+        versionCode 2
+        versionName "0.1.2"
     }
     buildTypes {
         debug {
@@ -83,25 +83,29 @@ dependencies {
 
     compile 'org.jsoup:jsoup:1.8.3'
     compile 'com.pawegio.kandroid:kandroid:0.3.8@aar'
-//    compile 'com.yqritc:recyclerview-flexibledivider:1.2.6'
-
-    compile 'io.reactivex:rxkotlin:0.30.1'
-    compile 'io.reactivex:rxandroid:1.0.1'
 
     compile 'com.squareup.okhttp3:okhttp:3.2.0'
     compile 'com.squareup.okhttp3:okhttp-urlconnection:3.2.0'
     compile 'com.squareup.okhttp3:logging-interceptor:3.2.0'
 
-    compile 'com.squareup.retrofit2:retrofit:2.0.0'
-    compile 'com.squareup.retrofit2:converter-gson:2.0.0'
-    compile 'com.squareup.retrofit2:adapter-rxjava:2.0.0'
+    compile 'com.squareup.retrofit2:retrofit:2.2.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.2.0'
+    compile 'com.squareup.retrofit2:adapter-rxjava2:2.2.0'
 
-    compile 'com.github.orangegangsters:swipy:1.2.2@aar'
+    compile 'com.github.orangegangsters:swipy:1.2.3@aar'
 
     compile 'com.squareup.picasso:picasso:2.5.2'
 
     compile 'com.github.salomonbrys.kotson:kotson:2.1.0'
     compile 'com.squareup:otto:1.3.8'
+
+    compile "io.reactivex.rxjava2:rxjava:2.0.6"
+    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    compile 'com.trello.rxlifecycle2:rxlifecycle:2.0.1'
+    compile 'com.jakewharton.rxbinding2:rxbinding:2.0.0'
+    compile 'com.trello.rxlifecycle2:rxlifecycle-android:2.0.1'
+    compile 'com.trello.rxlifecycle2:rxlifecycle-components:2.0.1'
+    compile 'com.trello.rxlifecycle2:rxlifecycle-navi:2.0.1'
     
     compile('com.crashlytics.sdk.android:crashlytics:2.5.5@aar') {
         transitive = true;
