--- a/app/build.gradle
+++ b/app/build.gradle
@@ -110,6 +110,9 @@ dependencies {
         transitive = true;
     }
 
+    compile 'com.facebook.fresco:fresco:1.2.0'
+    compile 'com.facebook.fresco:animated-gif:1.2.0'
+
     testCompile 'junit:junit:4.12'
     testCompile 'org.robolectric:robolectric:3.0'
     testCompile 'org.robolectric:shadows-support-v4:3.0'
