--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,17 +1,18 @@
 buildscript {
-    ext.kotlin_version = '1.1.1'
-    ext.playServices = "10.2.0"
-    ext.supportLibraryVersion = "25.3.0"
+    ext.kotlin_version = '1.1.3-2'
+    ext.playServices = "11.2.2"
+    ext.supportLibraryVersion = "26.0.2"
     ext.fileProviderAuthority = "com.scurab.android.zumpareader.fileprovider"
 
     repositories {
         maven { url 'https://maven.fabric.io/public' }
         jcenter()
         mavenCentral()
+        google()
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.0'
+        classpath 'com.android.tools.build:gradle:3.0.0-alpha4'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'io.fabric.tools:gradle:1.+'
     }
@@ -23,19 +24,20 @@ apply plugin: 'kotlin-android'
 apply plugin: 'io.fabric'
 
 android {
-    compileSdkVersion 25
+    compileSdkVersion 26
     buildToolsVersion '25.0.2'
 
     defaultConfig {
         applicationId "com.scurab.android.zumpareader"
         buildConfigField "String", "BUILD_DETAIL", "\"build-" + getDate() + ",git-" + gitSha() + "\""
         buildConfigField "String", "Authority", "\"" + fileProviderAuthority + "\""
-        minSdkVersion 14
-        targetSdkVersion 25
-        versionCode 3
-        versionName "0.1.3"
+        minSdkVersion 16
+        targetSdkVersion 26
+        versionCode 4
+        versionName "0.1.4"
         manifestPlaceholders = [authority: fileProviderAuthority]
     }
+
     buildTypes {
         debug {
             versionNameSuffix "-" + getDate()
@@ -44,16 +46,6 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-        }
-    }
-
-    productFlavors {
-        dev {
-            applicationId "com.scurab.android.zumpareader"
-        }
-
-        playStore {
-            applicationId "com.scurab.zumpareader"
         }
     }
 
@@ -67,6 +59,17 @@ repositories {
     maven { url 'https://maven.fabric.io/public' }
     jcenter()
     mavenCentral()
+}
+
+task (depsize) << {
+    def size = 0;
+    configurations._debugApk.collect { it.length() / (1024 * 1024) }.each { size += it }
+    println "Total dependencies size: ${Math.round(size * 100) / 100} Mb"
+
+    configurations
+            ._debugApk
+            .sort { -it.length() }
+            .each { println "${it.name} : ${Math.round(it.length() / (1024) * 100) / 100} kb" }
 }
 
 dependencies {
@@ -83,44 +86,45 @@ dependencies {
     compile 'org.jetbrains.anko:anko-appcompat-v7:0.8.3' // For appcompat-v7 bindings
 
     compile 'org.jsoup:jsoup:1.8.3'
-    compile 'com.pawegio.kandroid:kandroid:0.3.8@aar'
+    compile 'com.pawegio.kandroid:kandroid:0.8.2@aar'
 
     def retrofit = "3.6.0"
     compile "com.squareup.okhttp3:okhttp:${retrofit}"
     compile "com.squareup.okhttp3:okhttp-urlconnection:${retrofit}"
     compile "com.squareup.okhttp3:logging-interceptor:${retrofit}"
 
-    compile 'com.squareup.retrofit2:retrofit:2.2.0'
-    compile 'com.squareup.retrofit2:converter-gson:2.2.0'
-    compile 'com.squareup.retrofit2:adapter-rxjava2:2.2.0'
+    compile 'com.squareup.retrofit2:retrofit:2.3.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.3.0'
+    compile 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
 
     compile 'com.github.orangegangsters:swipy:1.2.3@aar'
 
     compile 'com.squareup.picasso:picasso:2.5.2'
 
-    compile 'com.github.salomonbrys.kotson:kotson:2.1.0'
+    compile 'com.github.salomonbrys.kotson:kotson:2.5.0'
     compile 'com.squareup:otto:1.3.8'
 
-    compile "io.reactivex.rxjava2:rxjava:2.0.6"
+    compile "io.reactivex.rxjava2:rxjava:2.1.0"
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
-    compile 'com.trello.rxlifecycle2:rxlifecycle:2.0.1'
+    compile 'com.trello.rxlifecycle2:rxlifecycle:2.1.0'
     compile 'com.jakewharton.rxbinding2:rxbinding:2.0.0'
-    compile 'com.trello.rxlifecycle2:rxlifecycle-android:2.0.1'
-    compile 'com.trello.rxlifecycle2:rxlifecycle-components:2.0.1'
+    compile 'com.trello.rxlifecycle2:rxlifecycle-android:2.1.0'
+    compile 'com.trello.rxlifecycle2:rxlifecycle-components:2.1.0'
     compile 'com.trello.rxlifecycle2:rxlifecycle-navi:2.0.1'
     
     compile('com.crashlytics.sdk.android:crashlytics:2.5.5@aar') {
-        transitive = true;
+        transitive = true
     }
 
     compile 'com.facebook.fresco:fresco:1.2.0'
     compile 'com.facebook.fresco:animated-gif:1.2.0'
 
     testCompile 'junit:junit:4.12'
-    testCompile 'org.robolectric:robolectric:3.0'
-    testCompile 'org.robolectric:shadows-support-v4:3.0'
+    def robo = "3.3.1"
+    testCompile "org.robolectric:robolectric:$robo"
+    testCompile "org.robolectric:shadows-support-v4:$robo"
     testCompile ('com.squareup:fest-android:1.0.8') {
         exclude module: 'support-v4'//some weird incompatibility issue
     }
-    testCompile 'org.mockito:mockito-core:1.10.19'
+    testCompile 'org.mockito:mockito-core:2.8.47'
 }
