--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,13 +28,13 @@ android {
     buildToolsVersion '25.0.2'
 
     defaultConfig {
-        applicationId "com.scurab.android.zumpareader"
+        applicationId "com.scurab.zumpareader"
         buildConfigField "String", "BUILD_DETAIL", "\"build-" + getDate() + ",git-" + gitSha() + "\""
         buildConfigField "String", "Authority", "\"" + fileProviderAuthority + "\""
         minSdkVersion 16
         targetSdkVersion 26
-        versionCode 4
-        versionName "0.1.4"
+        versionCode 53
+        versionName "3.0.0"
         manifestPlaceholders = [authority: fileProviderAuthority]
     }
 
