--- a/app/build.gradle
+++ b/app/build.gradle
@@ -119,6 +119,8 @@ dependencies {
     compile 'com.facebook.fresco:fresco:1.5.0'
     compile 'com.facebook.fresco:animated-gif:1.5.0'
 
+    compile 'com.bogdwellers:pinchtozoom:0.1'
+
     testCompile 'junit:junit:4.12'
     def robo = "3.3.1"
     testCompile "org.robolectric:robolectric:$robo"
