--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,6 +46,12 @@
             android:theme="@style/AppTheme.Settings"
             android:label="@string/app_name"/>
 
+        <activity
+            android:name=".app.ImageActivity"
+            android:configChanges="orientation|screenSize"
+            android:theme="@style/AppTheme.Image"
+            android:label="@string/app_name"/>
+
         <meta-data
             android:name="io.fabric.ApiKey"
             android:value="1dcf380e1e5890c2c982152db1933ee9d7e8bde8" />
