--- a/app/build.gradle
+++ b/app/build.gradle
@@ -123,6 +123,10 @@ dependencies {
 
     compile 'com.bugfender.sdk:android:0.+'
 
+    compile('com.giphy.sdk:core:1.0.0@aar') {
+        transitive=true
+    }
+
     testCompile 'junit:junit:4.12'
     def robo = "3.3.1"
     testCompile "org.robolectric:robolectric:$robo"
