--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -52,6 +52,17 @@
             android:theme="@style/AppTheme.Image"
             android:label="@string/app_name"/>
 
+        <activity
+            android:name=".giphy.GiphyActivity"
+            android:configChanges="orientation|screenSize"
+            android:theme="@style/AppTheme.Image"
+            android:label="@string/app_name">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+                <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
+        </activity>
+
         <meta-data
             android:name="io.fabric.ApiKey"
             android:value="1dcf380e1e5890c2c982152db1933ee9d7e8bde8" />
