--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 buildscript {
     ext.kotlin_version = '1.1.3-2'
     ext.playServices = "11.2.2"
-    ext.supportLibraryVersion = "26.0.2"
+    ext.supportLibraryVersion = "26.1.0"
     ext.fileProviderAuthority = "com.scurab.android.zumpareader.fileprovider"
 
     repositories {
@@ -25,7 +25,7 @@ apply plugin: 'io.fabric'
 
 android {
     compileSdkVersion 26
-    buildToolsVersion '25.0.2'
+    buildToolsVersion '26.0.2'
 
     defaultConfig {
         applicationId "com.scurab.zumpareader"
@@ -33,8 +33,8 @@ android {
         buildConfigField "String", "Authority", "\"" + fileProviderAuthority + "\""
         minSdkVersion 16
         targetSdkVersion 26
-        versionCode 57
-        versionName "3.0.4"
+        versionCode 58
+        versionName "3.0.5"
         manifestPlaceholders = [authority: fileProviderAuthority]
     }
 
@@ -52,6 +52,10 @@ android {
     sourceSets {
         main.java.srcDirs += 'src/main/java'
         main.java.srcDirs += 'src/main/kotlin'
+    }
+
+    dexOptions {
+        jumboMode = true
     }
 }
 
@@ -104,11 +108,11 @@ dependencies {
     compile 'com.github.salomonbrys.kotson:kotson:2.5.0'
     compile 'com.squareup:otto:1.3.8'
 
-    compile "io.reactivex.rxjava2:rxjava:2.1.0"
+    compile "io.reactivex.rxjava2:rxjava:2.1.5"
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
-    compile 'com.trello.rxlifecycle2:rxlifecycle:2.1.0'
+    compile 'com.trello.rxlifecycle2:rxlifecycle:2.2.1'
     compile 'com.jakewharton.rxbinding2:rxbinding:2.0.0'
-    compile 'com.trello.rxlifecycle2:rxlifecycle-android:2.1.0'
+    compile 'com.trello.rxlifecycle2:rxlifecycle-android:2.2.1'
     compile 'com.trello.rxlifecycle2:rxlifecycle-components:2.1.0'
     compile 'com.trello.rxlifecycle2:rxlifecycle-navi:2.0.1'
     
