--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -55,13 +55,7 @@
         <activity
             android:name=".giphy.GiphyActivity"
             android:configChanges="orientation|screenSize"
-            android:theme="@style/AppTheme.Image"
-            android:label="@string/app_name">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="android.intent.category.LAUNCHER"/>
-            </intent-filter>
-        </activity>
+            android:label="@string/app_name"/>
 
         <meta-data
             android:name="io.fabric.ApiKey"
