--- a/app/build.gradle
+++ b/app/build.gradle
@@ -98,9 +98,10 @@ dependencies {
     compile "com.squareup.okhttp3:okhttp-urlconnection:${retrofit}"
     compile "com.squareup.okhttp3:logging-interceptor:${retrofit}"
 
-    compile 'com.squareup.retrofit2:retrofit:2.3.0'
-    compile 'com.squareup.retrofit2:converter-gson:2.3.0'
-    compile 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
+    def retrofit = "2.4.0"
+    compile "com.squareup.retrofit2:retrofit:$retrofit"
+    compile "com.squareup.retrofit2:converter-gson:$retrofit"
+    compile "com.squareup.retrofit2:adapter-rxjava2:$retrofit"
 
     compile 'com.github.orangegangsters:swipy:1.2.3@aar'
 
@@ -109,8 +110,8 @@ dependencies {
     compile 'com.github.salomonbrys.kotson:kotson:2.5.0'
     compile 'com.squareup:otto:1.3.8'
 
-    compile "io.reactivex.rxjava2:rxjava:2.1.5"
-    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    compile "io.reactivex.rxjava2:rxjava:2.1.13"
+    compile 'io.reactivex.rxjava2:rxandroid:2.0.2'
     compile 'com.trello.rxlifecycle2:rxlifecycle:2.2.1'
     compile 'com.jakewharton.rxbinding2:rxbinding:2.0.0'
     compile 'com.trello.rxlifecycle2:rxlifecycle-android:2.2.1'
