--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,5 @@
 buildscript {
-    ext.kotlin_version = '1.2.71'
+    ext.kotlin_version = '1.3.30'
     ext.playServices = "16.0.1"
     ext.supportLibraryVersion = "28.0.0"
     ext.fileProviderAuthority = "com.scurab.android.zumpareader.fileprovider"
@@ -12,7 +12,7 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.2.1'
+        classpath 'com.android.tools.build:gradle:3.4.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'io.fabric.tools:gradle:1.+'
     }
@@ -26,7 +26,6 @@ apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdkVersion 28
-    buildToolsVersion '28.0.3'
 
     defaultConfig {
         applicationId "com.scurab.zumpareader"
@@ -34,8 +33,8 @@ android {
         buildConfigField "String", "Authority", "\"" + fileProviderAuthority + "\""
         minSdkVersion 16
         targetSdkVersion 28
-        versionCode 63
-        versionName "3.0.10"
+        versionCode 64
+        versionName "3.0.11"
         manifestPlaceholders = [authority: fileProviderAuthority]
         multiDexEnabled true
     }
@@ -67,20 +66,22 @@ repositories {
     mavenCentral()
 }
 
-task(depsize) << {
-    def size = 0;
-    configurations._debugApk.collect { it.length() / (1024 * 1024) }.each { size += it }
-    println "Total dependencies size: ${Math.round(size * 100) / 100} Mb"
+task(depsize) {
+    doLast {
+        def size = 0;
+        configurations._debugApk.collect { it.length() / (1024 * 1024) }.each { size += it }
+        println "Total dependencies size: ${Math.round(size * 100) / 100} Mb"
 
-    configurations
-            ._debugApk
-            .sort { -it.length() }
-            .each { println "${it.name} : ${Math.round(it.length() / (1024) * 100) / 100} kb" }
+        configurations
+                ._debugApk
+                .sort { -it.length() }
+                .each { println "${it.name} : ${Math.round(it.length() / (1024) * 100) / 100} kb" }
+    }
 }
 
 dependencies {
     //compile fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.google.firebase:firebase-messaging:17.3.3'
+    implementation 'com.google.firebase:firebase-messaging:17.6.0'
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation "com.android.support:appcompat-v7:${supportLibraryVersion}"
@@ -120,11 +121,11 @@ dependencies {
     implementation "com.trello.rxlifecycle2:rxlifecycle-components:${trelo}"
     implementation "com.trello.rxlifecycle2:rxlifecycle-navi:${trelo}"
 
-    implementation('com.crashlytics.sdk.android:crashlytics:2.5.5@aar') {
+    implementation('com.crashlytics.sdk.android:crashlytics:2.9.3@aar') {
         transitive = true
     }
 
-    def fresco = "1.11.0"
+    def fresco = "1.13.0"
     implementation "com.facebook.fresco:fresco:${fresco}"
     implementation "com.facebook.fresco:animated-gif:${fresco}"
 
