--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,9 +83,11 @@ dependencies {
     //compile fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.google.firebase:firebase-messaging:17.6.0'
 
+    def androidx = "1.0.2"
+    def material = "1.0.0"
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation "com.android.support:appcompat-v7:${supportLibraryVersion}"
-    implementation "com.android.support:design:${supportLibraryVersion}"
+    implementation "androidx.appcompat:appcompat:$androidx"
+    implementation "com.google.android.material:material:$material"
 
     implementation 'org.jetbrains.anko:anko-sdk15:0.8.3' // sdk19, sdk21, sdk23 are also available
     implementation 'org.jetbrains.anko:anko-support-v4:0.8.3'
